# ASPB

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
sample_output/: sample.csv  sample.json
sp_secret_bot/: azure_client.py  main.py  report.py  scanner.py  utils.py
tests/: test_report.py  test_scanner.py
